<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SubjectTopicListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTopicList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_topic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:text="@string/topic"
        android:contentDescription="@string/add_button"
        app:icon="@drawable/ic_add"
        android:focusable="true" />

    <TextView
        android:id="@+id/nothing_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nothing_here"
        android:textAlignment="center"
        android:textSize="34sp"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>